	  - Force additionalDomainName variable in user_add.php to array.
	  - As of PHP 4.3, the header() function have changed behaviour! It no longer allows overriding
	    the HTML header. It dies if data have already been sent (or {ob_}flush() have been called
	    which it is in pql_flush()). Solution: Don't call {ob_}flush() if headers have already
	    been sent.

	GUI layout changes
	  - Don't show the Kerberos info in the user add details page if KERBEROS isn't an option
	    to choose from.
	  - Don't output the '@' separator between recipient part and email domain if there IS no
	    domain to output in the user add details page.
	  - Change wording of 'Miscellaneous' in tables/domain_details-owner.inc to 'Additional information'
	    which is ... better.

	Misc changes
	  - Prettier debug output in include/pql_search.inc:pql_search()

phpQLAdmin 2.3.5 Dec  2 2006
	Bug fixes
	  - Correctly verify user (different depending on what PQL_CONF_REFERENCE_USERS_WITH
	    is set to - uid or sn).
	  - pql_format_error_span() needs to be prefixed/called with 'echo' to get any
	    output.
	  - Faulty include/attrib.dnszone.inc:attribute_translate_type(). Tried to verify
	    $_REQUEST["attrib"] instead of param to function ('$attrib').
	  - Form value 'type' was overwritten by a hidden input in include/attrib.dnszone.inc:attribute_print_form().
	  - The pql_search() might return a 'flat' array in include/pql_bind9.inc:pql_bind9_update_serial(),
	    therefor check both 'is_array($object[0])' AND 'is_array($object)'.
	  - Setup missing $_REQUEST["view"] value _before_ any pql_generate_button().
	  - Send '&mark=yes' to tools/navbutton.php IF the button is mentioned in $_REQUEST["view"].
	  - In tools/navbutton.php, make the text red if called with the 'mark' value.
	  - pql_get_status() might return empty array in status_ldap.php, so can't check
	    for just '$tmp'. Use $tmp[createtimestamp] and $tmp[monitortimestamp].